--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,65 @@
+<!--banner-->
+<% content_for :banner do %>
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+		</ol>
+
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner" role="listbox">
+			<div class="item active">
+				<%= image_tag "banner1.png", alt: "核桃在线教育平台"%>
+				<div class="carousel-caption">
+
+				</div>
+			</div>
+			<div class="item">
+				<%= image_tag "banner1.png", alt: "核桃在线教育平台"%>
+				<div class="carousel-caption">
+
+				</div>
+			</div>
+			<div class="item">
+				<%= image_tag "banner1.png", alt: "核桃在线教育平台"%>
+				<div class="carousel-caption">
+
+				</div>
+			</div>
+		</div>
+
+		<!-- Controls -->
+		<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+<% end %>
+<!-- home content -->
+<div class="container">
+	<!-- walnut online education platform -->
+	<div class="row">
+		<div class="col-md-6">
+			
+		</div>
+		<div class="col-md-6">
+			
+		</div>
+	</div>
+
+</div>
+<%= image_tag "home.jpg", width: "100%" %>
+
+
+
+
+
 <%= link_to destroy_user_session_path, :method => :delete, class: "navbar-link" do %>
-  <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> 退出
+<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> 退出
 <% end %>
