--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,7 @@
 	<%= yield :banner %>
 	<%= yield %>
 	<%= render partial: 'share/footer' %>
+
+  <%= render partial: 'share/devise_form' %>
 </body>
 </html>
