--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,5 +1,15 @@
+//header
 $color-black: #000;
 $color-sign: #5582ED;
+$color-green: #11BD9E;
+//footer
+$footer-bg: #F8F8F8;
+$footer-gray: #ECECEC;
+$border-ul: #C7C7C7;
+//content
+$gray-bg: #F5F5F5;
+//font
+$font-default: #333;
 
 //navbar
 $navbar-height: 70px;
