--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,21 +12,15 @@
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
 				<%= image_tag "banner1.png", alt: "核桃在线教育平台"%>
-				<div class="carousel-caption">
-
-				</div>
+				<div class="carousel-caption"></div>
 			</div>
 			<div class="item">
 				<%= image_tag "banner1.png", alt: "核桃在线教育平台"%>
-				<div class="carousel-caption">
-
-				</div>
+				<div class="carousel-caption"></div>
 			</div>
 			<div class="item">
 				<%= image_tag "banner1.png", alt: "核桃在线教育平台"%>
-				<div class="carousel-caption">
-
-				</div>
+				<div class="carousel-caption"></div>
 			</div>
 		</div>
 
@@ -44,12 +38,31 @@
 <!-- home content -->
 <div class="container">
 	<!-- walnut online education platform -->
-	<div class="row">
+	<div class="row platform">
 		<div class="col-md-6">
-			
+			<%= image_tag "platform_img.png", class: "img-responsive" %>
 		</div>
 		<div class="col-md-6">
-			
+			<h2 class="title-green">核桃在线教育平台</h2>
+			<div class="express">
+				<div class="express-icon"><%= image_tag "platform_study.png" %></div>
+				<span>在线学习</span>
+			</div>
+			<div class="plus-equal"><%= image_tag "platform_plus.png" %></div>
+			<div class="express">
+				<div class="express-icon"><%= image_tag "platform_train.png" %></div>
+				<span>协同实训</span>
+			</div>
+			<div class="plus-equal"><%= image_tag "platform_plus.png"%></div>
+			<div class="express">
+				<div class="express-icon"><%= image_tag "platform_star.png" %></div>
+				<span>实习招聘</span>
+			</div>
+			<div class="plus-equal"><%= image_tag "platform_equal.png" %></div>
+			<div class="express">
+				<div class="express-icon"><%= image_tag "platform_icon.png" %></div>
+				<span>在线教育平台</span>
+			</div>
 		</div>
 	</div>
 
