--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,2 +1,33 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "variables";
+//home
+.title-green{
+	font-weight: bold;
+	color: $color-green;
+	margin: 0 0 40px 0;
+}
+.platform{
+	padding: 30px 0 40px 0;
+	.express{
+		text-align: center;
+		width: 100px;
+		float: left;
+		font-weight: bold;
+		.express-icon{
+			height: 80px;
+			width: 80px;
+			line-height: 70px;
+			border-radius: 40px;
+			border: 3px solid $color-black;
+			margin: 0 auto 5px auto;
+		}
+	}
+	.plus-equal{
+		width: 40px;
+		height: 80px;
+		line-height: 80px;
+		float: left;
+		text-align: center;
+	}
+}
