delete test image

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -30,4 +30,10 @@
 		float: left;
 		text-align: center;
 	}
+	.plat-content{
+		padding-top: 30px;
+		line-height: 36px;
+		font-size: 16px;
+		text-align: justify;
+	}
 }
