--- a/app/views/recruitments/index.html.erb
+++ b/app/views/recruitments/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container waper">
   <div class="row recruit_title">
     <div class="col-md-5"><hr class="divider"></div>
     <div class="col-md-2 recruit_class_word"><span class="recruit_class_title" >招聘分类</span></div>
