--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,39 +1,46 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
 @import "variables";
-//home
-.title-green{
-	font-weight: bold;
-	color: $color-green;
-	margin: 0 0 40px 0;
-}
-.platform{
-	padding: 30px 0 40px 0;
-	.express{
-		text-align: center;
-		width: 100px;
-		float: left;
+.home__index{
+	.title-green{
 		font-weight: bold;
-		.express-icon{
-			height: 80px;
-			width: 80px;
-			line-height: 70px;
-			border-radius: 40px;
-			border: 3px solid $color-black;
-			margin: 0 auto 5px auto;
-		}
-	}
-	.plus-equal{
-		width: 40px;
-		height: 80px;
-		line-height: 80px;
-		float: left;
-		text-align: center;
+		color: $color-green;
+		list-style-position: inside;
 	}
 	.plat-content{
-		padding-top: 30px;
 		line-height: 36px;
 		font-size: 16px;
 		text-align: justify;
 	}
+	.platform{
+		padding: 30px 0 40px 0;
+		.express{
+			text-align: center;
+			width: 100px;
+			float: left;
+			font-weight: bold;
+			margin: 30px 0;
+			.express-icon{
+				height: 80px;
+				width: 80px;
+				line-height: 70px;
+				border-radius: 40px;
+				border: 3px solid $color-black;
+				margin: 0 auto 5px auto;
+			}
+		}
+		.plus-equal{
+			width: 40px;
+			height: 80px;
+			line-height: 80px;
+			float: left;
+			text-align: center;
+			margin: 30px 0;
+		}
+	}
+	.study{
+		padding-top: 90px;
+		padding-bottom: 130px;
+		.phone{
+			padding-top: 150px;
+		}
+	}	
 }
