--- a/app/assets/stylesheets/share.scss
+++ b/app/assets/stylesheets/share.scss
@@ -13,7 +13,7 @@
 //footer
 .footer-top{
 	background-color: $footer-bg;
-	height: 190px;
+	min-height: 190px;
 	padding-top: 20px;
 	.footer-link{
 		border-left: 1px solid $border-ul;
