--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 <%= render partial: "/share/banner"%>
 <% end %>
 <!-- walnut online education platform -->
-<div class="container">
+<div class="container home__index">
 	<div class="row platform">
 		<div class="col-md-6">
 			<%= image_tag "platform_img.png", class: "img-responsive" %>
@@ -29,30 +29,69 @@
 				<div class="express-icon"><%= image_tag "platform_icon.png" %></div>
 				<span>在线教育平台</span>
 			</div>
-			<div class="col-md-12 plat-content">
-				大唐邦彦在线教育平台是一个集在线学习、实习实训、项目管理和招聘信息于一体的大型教育及延伸服务综合性平台，服务的用户群体是：IT互联网相关专业的在校大学生。与众多在线互联网教育平台不同的是，邦彦教育不仅专注于IT互联网教育的内容挖掘和形式创新，还以毕业大学生的就业问题为出发点，提供多方向、全面而贴近市场的服务。满足了大学生掌握一门职业技能、获得项目经历的积累、适应企业工作节奏和管理的切实需求，为学生快速实现在校学生向社会人的成功转型提供一套系统科学的解决方案
+			<div class="row">
+				<div class="col-md-12 plat-content">
+					大唐邦彦在线教育平台是一个集在线学习、实习实训、项目管理和招聘信息于一体的大型教育及延伸服务综合性平台，服务的用户群体是：IT互联网相关专业的在校大学生。与众多在线互联网教育平台不同的是，邦彦教育不仅专注于IT互联网教育的内容挖掘和形式创新，还以毕业大学生的就业问题为出发点，提供多方向、全面而贴近市场的服务。满足了大学生掌握一门职业技能、获得项目经历的积累、适应企业工作节奏和管理的切实需求，为学生快速实现在校学生向社会人的成功转型提供一套系统科学的解决方案。
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
 <!-- study online -->
-<div class="row ">
-	<div class="col-md-6"></div>
-	<div class="col-md-6"></div>
+<div class="gray-bg">
+	<div class="container">
+		<div class="row study">
+			<div class="col-md-6">
+				<h2 class="title-green"><li>在线学习</li></h2>
+				<div class="row">
+					<div class="col-md-12 plat-content">
+						在线学习是在线教育平台的基础功能模块，该模块提供各类IT互联网领域的理论及应用技能精品课程，同时共享各高级合作院校的优质课程，极大的保证在线课程全、精、新、独家的特点。<br>
+						平台支持多种课件播放形式，满足不同课程、或同一课程的不同教学方式。同时支持教师用户上传、制作课程，开设自己的培训班、在线完成答疑、批改等。
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<%= image_tag "study_computer.png", width: "80%", class: "pull-left" %>
+				<%= image_tag "study_phone.png", width: "20%", class: "pull-right phone" %>
+			</div>
+		</div>
+	</div>
 </div>
 <!-- train -->
-<div class="row">
-	<div class="col-md-6"></div>
-	<div class="col-md-6"></div>
+<div class="container">
+	<div class="row study">
+		<div class="col-md-6">
+			<%= image_tag "train_computer.png" %>
+		</div>
+		<div class="col-md-6">
+			<h2 class="title-green"><li>协同实训</li></h2>
+			<div class="row">
+				<div class="col-xs-12 plat-content">
+					在线协同平台是服务实训项目和创业项目的信息发布、团队组建、协同开发的平台。主要定位提高实训项目和创业项目实施过程中项目各成员、各任务间相互协同，特别适用于创业型或者学习型等中小型项目。<br>
+					在线协同平台以消除地域的阻碍、提高项目实施效率为目标，借鉴开源社区的优良基因，将敏捷项目管理知识与经验融入系统之中，通过互联网技术打破空间与时间的束缚，克服了传统项目团队成员需要同时同地工作的局限性。
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 <!-- recruid -->
-<div class="row">
-	<div class="col-md-6"></div>
-	<div class="col-md-6"></div>
+<div class="gray-bg">
+	<div class="gray-bg">
+		<div class="container">
+			<div class="row study">
+				<div class="col-md-6">
+					<h2 class="title-green"><li>实习招聘</li></h2>
+					<div class="row">
+						<div class="col-xs-12 plat-content">
+							大学生的就业问题近来越发突出的背景下，在校大学生的实习经历显得格外必要。但是大学生普遍缺乏获取实习机会的有效渠道，难以在步入社会之前得到一定的锻炼。<br>
+							邦彦在线教育平台开发出实习招聘模块，大学生可以在平台根据自己的专业查询到全国IT互联网行业的实习及招聘信息。另外，平台还为大学生用户提供个性定制的实习招聘信息推送功能，在WEB端和移动端都可实现，最大限度的方便大学生随时随地轻松找实习、找工作。
+						</div>		
+					</div>			
+				</div>
+				<div class="col-md-6">
+					<%= image_tag "train_all.png", class: "img-responsive" %>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-
-
-
-<%#= link_to destroy_user_session_path, :method => :delete, class: "navbar-link" do %>
-<!-- <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> 退出-->
-<%# end %>
