add pages to courses and sub_courses controller

--- a/app/assets/stylesheets/share.scss
+++ b/app/assets/stylesheets/share.scss
@@ -2,6 +2,10 @@
 //header
 .my-navbar{
 	font-weight: bold;
+	border: none !important;
+	li.active{
+		border-bottom: 4px solid $color-green;
+	}
 	.sign{
 		font-size: 12px;
 		li > a{
