--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Courses#index</h1>
-<p>Find me in app/views/courses/index.html.erb</p>
+<div class="row">
+	<h1>专业分类</h1>
+</div>
+
+<div class="row">
+	<h1>课程中心</h1>
+</div>
+<div class="col-sm-12">
+	<div class="col-sm-4"></div>
+	<div class="col-sm-4"></div>
+	<div class="col-sm-4"></div>
+</div>
