--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -23,7 +23,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right sign">
 				<li><a href="#" data-toggle="modal" data-target="#userLoginModal"><%= image_tag "loginin.png", width: '18' %>&nbsp;&nbsp;登录</a></li>
-				<li><a href="javascript:void(0);"><%= image_tag "loginout.png", width: '18' %>&nbsp;&nbsp;注册</a></li>
+				<li><a href="#" data-toggle="modal" data-target="#userRegisterModal"><%= image_tag "loginout.png", width: '18' %>&nbsp;&nbsp;注册</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
