--- a/app/views/recruitments/show.html.erb
+++ b/app/views/recruitments/show.html.erb
@@ -10,30 +10,30 @@
     <table class="recruit_table1">
       <tr>
           <td>职位名称</td>
-          <td>项目助理实习生</td>
+          <td><%= @recruitment.name %></td>
           <td>职业类别</td>
-          <td>实习</td>
+          <td><%=@recruitment.industry %></td>
         </tr>
         <tr>
           <td>招聘人数</td>
-          <td> 1人</td>
+          <td> <%=@recruitment.number %>人</td>
           <td>性别要求</td>
-          <td>无</td>
+          <td><%=@recruitment.gender %></td>
         </tr><tr>
           <td>要求证书</td>
-          <td>英语六级</td>
+          <td><%=@recruitment.certificate %></td>
           <td>学历要求</td>
-          <td>大专</td>
+          <td><%=@recruitment.degree %></td>
         </tr><tr>
           <td>工作地区</td>
-          <td>上海市</td>
+          <td><%=@recruitment.city %></td>
           <td>薪资范围</td>
-          <td>面议</td>
+          <td><%=@recruitment.remuneration %></td>
         </tr><tr>
           <td>外语要求</td>
-          <td>熟练</td>
+          <td><%=@recruitment.foreign_language %></td>
           <td>其他要求</td>
-          <td>无</td>
+          <td><%=@recruitment.others %></td>
         </tr>
     </table>
   </div>
