--- a/app/views/share/_devise_form.html.erb
+++ b/app/views/share/_devise_form.html.erb
@@ -1,108 +1,10 @@
-<!-- ===========================================登录========================================= -->
-<div class="modal fade devise-modal" tabindex="-1" role="dialog" id="userLoginModal">
+<div class="modal fade devise-modal" tabindex="-1" role="dialog" id="deviseUserModal">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
-      <div class="user-devise-form">
-        <h3 class="text-center title"><span>欢迎登录<span></h3>
-        <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-          <div class="form-inputs">
-            <%= f.input :mobile, required: false, label: false, autofocus: true %>
-            <%= f.input :password, required: false, label: false %>
-            <div class="form-group boolean optional user_remember_me">
-              <%= f.input :remember_me, wrapper: :login_boolean , as: :boolean if devise_mapping.rememberable? %>
-              <a href="#" data-toggle="modal" data-target="#userForgetPasswordModal" class="pull-right">忘记密码?</a><br>
-            </div>
-          </div>
-
-          <div class="form-actions row">
-            <div class="col-sm-6">
-              <%= f.button :submit, "确认登录", class: "btn btn-info" %>
-            </div>
-            <div class="col-sm-6">
-              <button type="button" data-toggle="modal" data-target="#userRegisterModal" class="btn btn-success">立即注册</button>
-            </div>
-          </div>
-        <% end %>
+      <div id="deviseUserFormModal" class="user-devise-form">
+        
       </div>
     </div>
   </div>
 </div>
-<!-- ===========================================登录========================================= -->
-
-<!-- ===========================================注册========================================= -->
-<div class="modal fade devise-modal" tabindex="-1" role="dialog" id="userRegisterModal">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <div class="user-devise-form">
-        <h3 class="text-center title"><span>欢迎注册<span></h3>
-        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <%= f.error_notification %>
-
-          <div class="form-inputs">
-            <%= f.input :mobile, label: false, autofocus: true, input_html: {id: "userMobile"} %>
-            <div class="row">
-              <div class="col-sm-7">
-                <%= f.input :sms, wrapper: :inline_form , label: false %>
-              </div>
-              <div class="col-sm-5">
-                <%= link_to("获取验证码", "javascript:void(0);" , class: "btn btn-info", id: "getSmsBtn") %>
-              </div>
-            </div>
-            <%= f.input :email, label: false %>
-            <%= f.input :password, label: false, hint: ("最少#{@minimum_password_length}个字符" if @validatable) %>
-            <%= f.input :password_confirmation, label: false %>
-          </div>
-
-          <div class="form-actions row">
-            <div class="col-sm-6">
-              <%= f.button :submit, "立即注册", class: "btn btn-success" %>
-            </div>
-            <div class="col-sm-6">
-              <button type="button" data-toggle="modal" data-target="#userLoginModal" class="btn btn-info">返回登录</button>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- ===========================================注册========================================= -->
-
-
-<!-- ===========================================忘记密码========================================= -->
-<div class="modal fade devise-modal" tabindex="-1" role="dialog" id="userForgetPasswordModal">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <div class="user-devise-form">
-        <h3 class="text-center title"><span>忘记密码<span></h3>
-        <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-
-          <div class="form-inputs">
-            <%= f.input :mobile, label: false, autofocus: true, input_html: {id: "userMobile"} %>
-            <div class="row">
-              <div class="col-sm-7">
-                <%= f.input :sms, wrapper: :inline_form , label: false %>
-              </div>
-              <div class="col-sm-5">
-                <%= link_to("获取验证码", "javascript:void(0);" , class: "btn btn-info", id: "getSmsBtn") %>
-              </div>
-            </div>
-            <%= f.input :password, label: false, hint: ("最少#{@minimum_password_length}个字符" if @validatable) %>
-            <%= f.input :password_confirmation, label: false %>
-          </div>
-
-          <div class="form-actions row">
-            <div class="col-sm-6">
-              <%= f.button :submit, "确认修改", class: "btn btn-danger" %>
-            </div>
-            <div class="col-sm-6">
-              <button type="button" data-toggle="modal" data-target="#userLoginModal" class="btn btn-info">返回登录</button>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- ===========================================忘记密码========================================= -->
 
