--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 	<%= render partial: "/share/banner"%>
 <% end %>
 <!-- walnut online education platform -->
-<div class="container home__index">
+<div class="container">
 	<div class="row platform">
 		<div class="col-md-6">
 			<%= image_tag "platform_img.png", class: "img-responsive" %>
