--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -1,3 +1,65 @@
 // Place all the styles related to the Courses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.courses__index {
+	.category a {
+		height: 60px;
+		line-height: 60px;
+		width: 100%;
+		text-align: center;
+		border: solid 1px #e1e1e1;
+		display: block;
+		&:hover, &.active {
+			background: #19b29f;
+			color: #fff;
+		}
+	}
+
+	.title-bar {
+		width: 100%;
+		height: 80px;
+		position: relative;
+		.title {
+      background-color: #fff;
+		  width: 120px;
+		  left: 50%;
+		  margin-left: -40px;
+		  position: absolute;
+		  top: 20px;
+		  z-index: 1;
+		}
+		.line {
+			height: 2px;
+			width: 100%;
+			position: absolute;
+      top: 38px;
+			background: #797a7a;
+		}
+	}
+	.bordered {
+		border: solid 1px #e3e3e3;
+		margin-bottom: 20px;
+		padding-bottom: 10px;
+		position: relative;
+		overflow: hidden;
+		img.avatar {
+			top: 150px;
+			left: 20px;
+			position: absolute;
+		}
+		.mt-40 {
+			margin-top: 40px;
+		}
+		.infos {
+			color: #9b9b9b;
+			b, span {
+				color: #19b29f;
+			}
+		}
+		.name {
+			color: #9b9b9b;
+			padding-right: 20px;
+			padding-top: 10px;
+		}
+	}
+}
