course index list

--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the Courses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.courses__index {
+.courses__index, .courses__list {
 	.category a {
 		height: 60px;
 		line-height: 60px;
