--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="<%= root_path %>">
 				<%= image_tag "logo.png" %>
 			</a>
 		</div>
@@ -16,7 +16,7 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-left">
-				<li class="<%= "active" if params[:controller] == 'home' && params[:action] == 'index'%>"><a href="#">课程中心</a></li>
+				<li class="<%= "active" if params[:controller] == 'courses' && params[:action] == 'index'%>"><a href="<%= courses_path %>">课程中心</a></li>
 				<li class="<%= "active" if params[:controller] == '' && params[:action] == ''%>"><a href="#">实训项目</a></li>
 				<li class="<%= "active" if params[:controller] == '' && params[:action] == ''%>"><a href="#">实习培训</a></li>
 				<li class="<%= "active" if params[:controller] == '' && params[:action] == ''%>"><a href="#">个人中心</a></li>
