--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -1,5 +1,5 @@
 <h3 class="text-center title"><span>欢迎注册<span></h3>
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), remote: true, format: :js, html: {id: "userDeviseSignUp"}) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {id: "userDeviseSignUp"}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
