finish sub_courses#show pages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ *= require mediaelement_rails
+ *= require mediaelement_rails/mejs-skins
  */
 
 @import "variables";
