--- a/app/assets/stylesheets/share.scss
+++ b/app/assets/stylesheets/share.scss
@@ -41,7 +41,20 @@
 	line-height: 60px;
 	font-size: 12px;
 }
+
 //global style
+.my-container{
+	padding: 0;
+}
+.my-row{
+	margin: 0 !important;
+}
+.col-0{
+	padding: 0 !important;
+}
+.col-5{
+	padding: 5px !important;
+}
 .my-ul{
 	padding: 0;
 	list-style: none;
@@ -88,5 +101,20 @@
 			}
 		}
 
+	}
+}
+.paging li{
+	display: inline;
+	list-style: none;
+	text-decoration: none;			
+	a{
+		color: #6E6E6E;
+		padding: 10px 5px;
+	}
+	a:hover, a:focus{
+		text-decoration: none;
+		color: white;
+		background: #00A369;			
+		border-radius: 2px;
 	}
 }
