--- a/app/assets/stylesheets/sub_courses.scss
+++ b/app/assets/stylesheets/sub_courses.scss
@@ -1,3 +1,76 @@
-// Place all the styles related to the sub_courses controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "variables";
+.video{
+	height: 530px;
+	background-color: $color-video-bg;
+	.list-title{
+		height: 50px;
+		line-height: 50px;
+		font-size: 16px;
+		text-align: center;
+		color: $color-black;
+		background-color: $list-title-bg;
+
+	}
+	.list-content{
+		height: 480px;
+		background-color: $color-black;
+		color: #fff;
+		overflow-y: auto;
+		padding: 10px 0;
+	}
+}
+.video-comment{
+	margin: 35px 0;
+	border: 1px solid $cmt-border;
+	.cmt-tab{
+		.cmt-ul{
+			height: 52px;
+			margin-bottom: 20px;
+			border-bottom: 1px solid $cmt-border;
+			li{
+				float: left;
+				padding: 15px 45px;
+				a{
+					color: #333;
+					text-decoration: none;
+					&:hover{
+						color: $tabs-color;
+					}
+				}
+				&.active{
+					border-bottom: 2px solid $tabs-color;
+					background-color: #fff;
+					a:hover{
+						color: #333;
+					}
+				}
+			}
+		}
+		.tab-content{
+			#cmt{
+				.cmt-btn{
+					color: #fff;
+					margin-top: 20px;
+					border: none;
+					padding: 10px 30px;
+					background-color: $color-green;
+				}
+				.cmt-hr{
+					border-color: $cmt-border;
+				}
+				.cmt-media{
+					height: 100px;
+					.media-body{
+						p{
+							height: 60px;
+						}
+					}
+				}
+			}
+
+			#answer{
+				display: none;
+			}			
+		}
+	}
+}
