--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -2,6 +2,7 @@
 $color-black: #000;
 $color-sign: #5582ED;
 $color-green: #11BD9E;
+$color-black: #000;
 //footer
 $footer-bg: #F8F8F8;
 $footer-gray: #ECECEC;
@@ -10,6 +11,12 @@ $border-ul: #C7C7C7;
 $gray-bg: #F5F5F5;
 //font
 $font-default: #333;
+
+//sub_courses#show
+$color-video-bg: #394044;
+$cmt-border: #CBCBCB;
+$tabs-color: #C90023;
+$list-title-bg: #AFAFAF;
 
 //navbar
 $navbar-height: 66px;
