--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -21,17 +21,8 @@
 				<li class="<%= "active" if params[:controller] == '' && params[:action] == ''%>"><a href="#">实习培训</a></li>
 				<li class="<%= "active" if params[:controller] == '' && params[:action] == ''%>"><a href="#">个人中心</a></li>
 			</ul>
-			<ul class="nav navbar-nav navbar-right sign">
-				<li>
-					<%= link_to(new_session_path(:user),remote: true, format: :js) do %>
-						<%= image_tag "loginin.png", width: '18' %>&nbsp;&nbsp;登录
-					<% end %>
-				</li>
-				<li>
-					<%= link_to(new_registration_path(:user),remote: true, format: :js) do %>
-						<%= image_tag "loginin.png", width: '18' %>&nbsp;&nbsp;注册
-					<% end %>
-				</li>
+			<ul id="userInfoMenu" class="nav navbar-nav navbar-right sign">
+				<%= render 'share/user_info' %>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
