--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,23 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
+ *= require_tree ./application/.
  *= require mediaelement_rails
  *= require mediaelement_rails/mejs-skins
  */
-
-@import "variables";
-@import "bootstrap-sprockets";
-@import "bootstrap";
-
-//全局flash提示
-.flash-message {
-  top: 200px;
-  width: 100%;
-  position: absolute;
-  .popover-content {
-    text-align: center;
-    font-size: 20px;
-  }
-}
