--- a/app/views/share/_banner.html.erb
+++ b/app/views/share/_banner.html.erb
@@ -9,15 +9,15 @@
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
 		<div class="item active">
-			<%= image_tag "banner1.png", alt: "核桃在线教育平台"%>
+			<%= image_tag "banner1.png", alt: "核桃在线教育平台", width: "100%" %>
 			<div class="carousel-caption"></div>
 		</div>
 		<div class="item">
-			<%= image_tag "banner1.png", alt: "核桃在线教育平台"%>
+			<%= image_tag "banner1.png", alt: "核桃在线教育平台", width: "100%" %>
 			<div class="carousel-caption"></div>
 		</div>
 		<div class="item">
-			<%= image_tag "banner1.png", alt: "核桃在线教育平台"%>
+			<%= image_tag "banner1.png", alt: "核桃在线教育平台", width: "100%" %>
 			<div class="carousel-caption"></div>
 		</div>
 	</div>
