--- a/app/views/sub_courses/show.html.erb
+++ b/app/views/sub_courses/show.html.erb
@@ -3,10 +3,8 @@
 		<div class="container">
 			<div class="row my-row">
 				<div class="col-md-9 col-0">
-					<video width="100%" height="530" class="mejs-player" poster="" controls="controls" preload="none">
-						<source type="video/mp4" src="http://vjs.zencdn.net/v/oceans.mp4" />
-						<source type="video/webm" src="myvideo.webm" />
-						<source type="video/ogg" src="myvideo.ogv" />
+					<video width="855" height="530" class="mejs-player" poster="poster.jpg" controls="controls" preload="none">
+						<source type="video/mp4" src="http://7xj8j2.com1.z0.glb.clouddn.com/无线网络设备维护（标清）~1.mp4" />
 					</video>
 				</div>
 				<div class="col-md-3 col-0">
@@ -23,8 +21,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="container video-comment">
-		<div class="cmt-tab">
+	<div class="container">
+		<div class="video-comment">
 			<div class="row">
 				<div class="col-xs-12">
 					<ul class="my-ul cmt-ul">
@@ -34,41 +32,39 @@
 				</div>
 				<div class="col-xs-12">
 					<div class="tab-content">
+						<!-- comment tabs -->
 						<div id="cmt">
 							<div class="col-xs-12">
-								<textarea class="form-control" rows="3"></textarea>
+								<textarea class="form-control" rows="3">
+								</textarea>
 								<button type="button" class="cmt-btn pull-right">发表评论</button>
 							</div>
 							<div class="col-xs-12">
 								<hr class="cmt-hr">
-								<% (1..5).each do |item| %>
+								<% 5.times do %>
 								<div class="media cmt-media">
 									<div class="media-left">
-										<a href="#">
-											<%= image_tag "recruit_computer.png", class: "media-object img-circle", width: "40"%>
-										</a>
+										<a href="#"><%= image_tag "recruit_computer.png", class: "media-object img-circle", width: "40"%></a>
 									</div>
 									<div class="media-body">
 										<h6 class="media-heading">DxDy</h6>
 										<p>其实程设真的很有趣～</p>
 										<h6 class="text-muted clearfix">
 											<span>时间：6天前</span>
-											<span class="pull-right">
-												<span class="glyphicon glyphicon-thumbs-up"></span>
-												<%= 2 %>
-											</span>
+											<%= link_to "javascript:void(0)" do %>
+											<span class="pull-right"><span class="glyphicon glyphicon-thumbs-up"></span> <%= 2 %></span>
+											<% end %>
 										</h6>
 									</div>
 								</div>
 								<hr>
 								<% end %>
 								<div class="text-center ">
-									<br>
-									<%= render partial: "/interviews/paging"%>
-									<br>
+									<br><%= render partial: "/interviews/paging"%><br>
 								</div>
 							</div>
 						</div>
+						<!-- answer tabs -->
 						<div id="answer">
 							world
 						</div>	
