--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -6,23 +6,23 @@
       <%end%>
     </li>
     <li>
-      <%= link_to "" do %>
+      <%= link_to admin_teachers_path do %>
         <span class="glyphicon glyphicon-user"></span> 教师列表
       <%end%>
     </li>
     <li>
       <%= link_to "" do %>
-        <span class="glyphicon glyphicon-tasks"></span> 学生列表
+        <span class="glyphicon glyphicon-tasks"></span> xxx
       <%end%>
     </li>
     <li>
       <%= link_to "" do %>
-        <span class="glyphicon glyphicon-flag"></span> 学院列表
+        <span class="glyphicon glyphicon-flag"></span> xxx
       <%end%>
     </li>
     <li>
       <%= link_to "" do %>
-        <span class="glyphicon glyphicon-th-list"></span> 专业列表
+        <span class="glyphicon glyphicon-th-list"></span> xxx
       <%end%>
     </li>
   </ul>
