finish admin categroy

--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -1,29 +1,29 @@
 <div id="left-bar" class="col-sm-2">
-  <ul id="xcui-menu">
-    <li>
-      <%= link_to admin_colleges_path do %>
-        <span class="glyphicon glyphicon-book"></span> 院校列表
-      <%end%>
-    </li>
-    <li>
-      <%= link_to admin_teachers_path do %>
-        <span class="glyphicon glyphicon-user"></span> 教师列表
-      <%end%>
-    </li>
-    <li>
-      <%= link_to "" do %>
-        <span class="glyphicon glyphicon-tasks"></span> xxx
-      <%end%>
-    </li>
-    <li>
-      <%= link_to "" do %>
-        <span class="glyphicon glyphicon-flag"></span> xxx
-      <%end%>
-    </li>
-    <li>
-      <%= link_to "" do %>
-        <span class="glyphicon glyphicon-th-list"></span> xxx
-      <%end%>
-    </li>
-  </ul>
+	<ul id="xcui-menu">
+		<li>
+			<%= link_to admin_colleges_path do %>
+				<span class="glyphicon glyphicon-book"></span> 院校列表
+			<%end%>
+		</li>
+		<li>
+			<%= link_to admin_teachers_path do %>
+				<span class="glyphicon glyphicon-user"></span> 教师列表
+			<% end %>
+		</li>
+		<li>
+			<%= link_to admin_categories_path do %>
+				<span class="glyphicon glyphicon-user"></span> 课程分类
+			<%end%>
+		</li>
+		<li>
+			<%= link_to "" do %>
+				<span class="glyphicon glyphicon-tasks"></span> xxx
+			<%end%>
+		</li>
+		<li>
+			<%= link_to "" do %>
+				<span class="glyphicon glyphicon-flag"></span> xxx
+			<%end%>
+		</li>
+	</ul>
 </div>
