--- a/app/views/recruitments/index.html.erb
+++ b/app/views/recruitments/index.html.erb
@@ -67,8 +67,8 @@
           <td><%=recruitment.publish_time %></td>
           <td><%=recruitment.view_count %></td>
           <td>
-            <%= link_to("javascript:void(0);" , title: "收藏", class: "vote-create-a", voteable_id: recruitment.id, voteable_type: recruitment.class, is_like: (current_user.voted_up_on? recruitment) ) do %>
-              <span id="voteRecruitmentSpan<%= recruitment.id %>" class="glyphicon <%= (current_user.voted_up_on? recruitment) ? "glyphicon-star" : "glyphicon-star-empty" %> iconstar" aria-hidden="true"></span>
+            <%= link_to("javascript:void(0);" , title: "收藏", class: "vote-create-a", voteable_id: recruitment.id, voteable_type: recruitment.class, is_like: (current_user.try(:voted_up_on?,recruitment)) ) do %>
+              <span id="voteRecruitmentSpan<%= recruitment.id %>" class="glyphicon <%= (current_user.try(:voted_up_on?,recruitment)) ? "glyphicon-star" : "glyphicon-star-empty" %> iconstar" aria-hidden="true"></span>
             <% end %>
           </td>
           <td><%=link_to"投递简历" , '#' ,class:"deliver"%></td>
