--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -48,19 +48,21 @@
 		<% 9.times do %>
 		<div class="col-sm-4">
 			<div class="bordered">
-				<%= image_tag("course-index.gif", class: "img-responsive")%>
-				<%= image_tag("course-teacher.png", class: "img-responsive avatar")%>
-				<span class="pull-right name">沈晴天</span>
-				<div class="col-sm-12 mt-40">
-					<p>操作系统和虚拟化安全</p>
-					<p>沈晴天，博士， 副教授。北京大学牛逼学院...</p>
-				</div>
-				<div class="col-sm-12 infos">
-					<span class="glyphicon glyphicon-eye-open"></span> 1549
-					&nbsp;&nbsp;&nbsp;
-					<span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-					<b class="pull-right">免费</b>
-				</div>
+			  <%= link_to course_path(1) do %>
+					<%= image_tag("course-index.gif", class: "img-responsive")%>
+					<%= image_tag("course-teacher.png", class: "img-responsive avatar")%>
+					<span class="pull-right name">沈晴天</span>
+					<div class="col-sm-12 mt-40">
+						<p>操作系统和虚拟化安全</p>
+						<p>沈晴天，博士， 副教授。北京大学牛逼学院...</p>
+					</div>
+					<div class="col-sm-12 infos">
+						<span class="glyphicon glyphicon-eye-open"></span> 1549
+						&nbsp;&nbsp;&nbsp;
+						<span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+						<b class="pull-right">免费</b>
+					</div>
+				<% end %>
 			</div>
 		</div>
 		<% end %>
