--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -6,15 +6,20 @@
 			<%end%>
 		</li>
 		<li>
-			<%= link_to admin_teachers_path do %>
-				<span class="glyphicon glyphicon-user"></span> 教师列表
-			<% end %>
-		</li>
-		<li>
 			<%= link_to admin_categories_path do %>
 				<span class="glyphicon glyphicon-user"></span> 课程分类
 			<%end%>
 		</li>
+		<li>
+      <%= link_to admin_teachers_path do %>
+        <span class="glyphicon glyphicon-user"></span> 教师列表
+      <%end%>
+    </li>
+    <li>
+      <%= link_to admin_courses_path do %>
+        <span class="glyphicon glyphicon-tasks"></span> 课程列表
+      <%end%>
+    </li>
 		<li>
 			<%= link_to "" do %>
 				<span class="glyphicon glyphicon-tasks"></span> xxx
