--- a/app/views/recruitments/index.html.erb
+++ b/app/views/recruitments/index.html.erb
@@ -94,7 +94,7 @@
         <% end %>
         </tbody>
       </table>
-      <%= paginate @recruitments %>
+      <div class="text-center"><%= paginate @recruitments %></div>
     </div>
 </div>
 
