--- a/app/views/kaminari/_first_page.html.erb
+++ b/app/views/kaminari/_first_page.html.erb
@@ -1,3 +1,3 @@
 <li>
-  <%= link_to_unless current_page.first?, raw("首页"), url, :remote => remote %>
+  <%= link_to_unless current_page.first?, t('views.pagination.first').html_safe, url, :remote => remote %>
 </li>
