--- a/app/views/user/my_projects.html.erb
+++ b/app/views/user/my_projects.html.erb
@@ -2,7 +2,14 @@
   <div class="container">
     <div class="row">
   <%=render "left_nav" %>
-      <div class="col-md-9"></div>
+      <div class="col-md-9">
+        <ul class="nav nav-tabs nav-justified">
+  ...
+</ul>
+<ul class="nav nav-pills nav-justified">
+  ...
+</ul>
+      </div>
     </div>
   </div>
 </div>
